cluster/apps/media/qbittorrent/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    hajimari.io/icon: game-icons:elf-helmet
    hajimari.io/enable: true
    hajimari.io/appName: "qbittorrent"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: torrent.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-svc
            port:
              number: 80
  tls:
  - hosts: 
    - torrent.${SECRET_LOCAL_DOMAIN}
    secretName: wildcard-certs-media
